<resources>
    <string name="app_name">temnypodval_2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_open">OPEN</string>
    <string name="button_interact">INTERACT</string>
    <string name="button_prev">PREV</string>
    <string name="button_next">NEXT</string>
    <string name="button_restart">RESTART</string>
    <string name="fragmentButtons_buttonInteract">ACT</string>
    <string name="fragmentButtons_buttonMenu">MENU</string>
    <string name="fragmentButtons_buttonNext">NEXT</string>
    <string name="fragmentButtons_buttonPrev">PREV</string>
    <string name="fragmentMenu_buttonExit">EXIT</string>
    <string name="fragmentMenu_buttonLoad">LOAD</string>
    <string name="fragmentMenu_buttonSave">SAVE</string>
    <string name="fragmentMenu_buttonResume">RESUME</string>
    <string name="fragmentButtons_buttonRestart">RESTART</string>
</resources>