<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout_FragmentButtons"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ButtonsFragment">

    <Button
        android:id="@+id/fragmentButtons_buttonPrev"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/fragmentButtons_buttonPrev"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <Button
        android:id="@+id/fragmentButtons_buttonNext"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:text="@string/fragmentButtons_buttonNext"
        app:layout_constraintBottom_toBottomOf="@+id/fragmentButtons_buttonPrev"
        app:layout_constraintStart_toEndOf="@+id/fragmentButtons_buttonPrev"
        app:layout_constraintTop_toTopOf="@+id/fragmentButtons_buttonPrev" />

    <Button
        android:id="@+id/fragmentButtons_buttonInteract"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="8dp"
        android:text="@string/fragmentButtons_buttonInteract"
        app:layout_constraintEnd_toEndOf="@+id/fragmentButtons_buttonPrev"
        app:layout_constraintStart_toStartOf="@+id/fragmentButtons_buttonPrev"
        app:layout_constraintTop_toBottomOf="@+id/fragmentButtons_buttonPrev" />

    <Button
        android:id="@+id/fragmentButtons_buttonRestart"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/fragmentButtons_buttonRestart"
        app:layout_constraintStart_toEndOf="@+id/fragmentButtons_buttonInteract"
        app:layout_constraintTop_toBottomOf="@+id/fragmentButtons_buttonNext" />

</androidx.constraintlayout.widget.ConstraintLayout>