<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView_entity"
        android:layout_width="225dp"
        android:layout_height="192dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.38"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textView_main"
        android:layout_width="170dp"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_entity" />

    <TextView
        android:id="@+id/textView_support"
        android:layout_width="170dp"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_main" />

    <Button
        android:id="@+id/button_interact"
        android:layout_width="170dp"
        android:layout_height="42dp"
        android:layout_marginTop="8dp"
        android:text="@string/button_interact"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_support" />

    <Button
        android:id="@+id/button_prev"
        android:layout_width="170dp"
        android:layout_height="42dp"
        android:text="@string/button_prev"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_interact" />

    <Button
        android:id="@+id/button_next"
        android:layout_width="170dp"
        android:layout_height="42dp"
        android:text="@string/button_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_prev" />

    <TextView
        android:id="@+id/textView_playerSupportInfo"
        android:layout_width="170dp"
        android:layout_height="42dp"
        android:layout_marginBottom="16dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/imageView_entity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView_playerMainInfo"
        android:layout_width="170dp"
        android:layout_height="42dp"
        android:layout_marginBottom="16dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/textView_playerSupportInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_restart"
        android:layout_width="170dp"
        android:layout_height="42dp"
        android:layout_marginBottom="8dp"
        android:text="@string/button_restart"
        app:layout_constraintBottom_toTopOf="@+id/textView_playerMainInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>